[cactpot-solver] Made the UI smaller
It's too big on my Mac.

--- a/ffxiv-mini-cactpot-solver/index.css
+++ b/ffxiv-mini-cactpot-solver/index.css
@@ -35,7 +35,7 @@ body {
     justify-content: center;
 
     padding: 1em;
-    font-size: 3em;
+    font-size: 2.4em;
 }
 
 #app {
